--- a/assets/css/meimidi.css
+++ b/assets/css/meimidi.css
@@ -1,11 +1,12 @@
-/* #fragTitle {
-  position: relative;
-  bottom: 10px;
-  left: 40px;
-  padding: 5px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: green;
-} */
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+g.note.playing {
+  fill: #9f4141;
+}
+
 button {
   border-radius: .20rem;
   background-color: #8f5536;
